[tool.poetry]
name = "is-honeypot"
version = "0.1.0"
description = ""
authors = ["kesha1225 <samedov03@mail.ru>"]
readme = "README.md"
packages = [{include = "is_honeypot"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
web3 = "^5.31.0"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
